<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/launch_at_boot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/setting_switch_min_height"
            android:text="@string/launch_at_boot" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/open_last_watched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/setting_switch_min_height"
            android:text="@string/play_last_watched" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/setting_padding"
            android:background="@color/color_text"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sort_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/setting_switch_min_height"
            android:text="@string/sort_category" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sort_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/setting_switch_min_height"
            android:text="@string/sort_channel" />
    </LinearLayout>

</layout>