<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/startup"
                    android:textAllCaps="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_text"
                    android:layout_marginStart="@dimen/setting_switch_margin"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/force_landscape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/force_landscape" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/launch_at_boot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/launch_at_boot" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/open_last_watched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/play_last_watched" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_switch_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/playlist"
                    android:textAllCaps="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_text"
                    android:layout_marginStart="@dimen/setting_switch_margin"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sort_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/sort_favorite" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sort_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/sort_category" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sort_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/sort_channel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setting_switch_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/player"
                    android:textAllCaps="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_text"
                    android:layout_marginStart="@dimen/setting_switch_margin"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/reverse_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/setting_switch_margin"
                android:layout_marginEnd="@dimen/setting_switch_margin"
                android:minHeight="@dimen/setting_switch_min_height"
                android:text="@string/reverse_player_navigation" />
            
        </LinearLayout>
    </ScrollView>
</layout>